--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por Gustavo Guanabara para o <a href="https://www.cursoemvideo.com/"target="_blank">Curso em Video</a></p>
+        <p>Site criado por Marlon Porto para o <a href="https://www.cursoemvideo.com/"target="_blank">Curso em Video</a></p>
     </footer>
 </body>
 </html>
